# intel-pipeline

./: .env.example  .gitignore  CLAUDE.md  Leighton_Wilson_CV.docx  README.md  config_loader.py  deduplicator.py  fetcher.py  generate_cv.py  pipeline.py  pipeline_v2.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  scheduler.py  summariser.py
.github/workflows/: ci.yml
config/: sources.yaml
tests/: test_pipeline.py
