# intel-pipeline is a flat-module application (pipeline.py, fetcher.py, etc.
# at repo root) launched via `python3 pipeline.py` / launchd, NOT an installable
# package. So there is deliberately no [build-system]/[project] table and CI
# does not `pip install -e .`. Module resolution under test comes from
# pytest's pythonpath below (same pattern as the other flat LeightonSec repos),
# not from an editable install.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
